--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "useForm",
+  "name": "@lionhat/use-form",
   "version": "1.0.0",
-  "description": "useForm React component",
+  "private": false,
+  "description": "A hook for form management in ReactJS",
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
@@ -28,11 +29,11 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
-  "author": "",
-  "homepage": "",
+  "author": "lionhat collective",
+  "homepage": "https://useForm.lionhat.co",
   "license": "MIT",
   "repository": "",
   "keywords": [
-    "react-component"
+    "react-hook"
   ]
 }
